--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,28 +4,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    tools:context=".fragments.ProfileFragment">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnLogOut"
+    <!-- <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:padding="15dp"
-        android:backgroundTint="#70BD74"
-        android:text="Sign Out" />
+        android:layout_alignParentTop="true"
+        app:menu="@menu/pro_toolbar"/> -->
 
-    <ImageView
-        android:id="@+id/imageView"
+    <TextView
+        android:id="@+id/tvUserName"
         android:layout_width="match_parent"
-        android:layout_height="308dp"
-        android:layout_gravity="center|start|center_horizontal"
-        android:layout_weight="1"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/poo"
-        tools:layout_marginTop="50dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="kaur"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <RelativeLayout
+        android:id="@+id/rl"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_below="@+id/tl"
+        android:layout_marginTop="49dp">
+
+        <ImageView
+            android:id="@+id/ivProfileImg"
+            android:layout_width="77dp"
+            android:layout_height="59dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="0dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/imgprofile" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ivProfileImg"
+            android:text="This is my insta app"
+            android:textColor="#040303" />
+
+        <include layout="@layout/top_profile_things" />
+
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl"
+        android:layout_marginTop="30dp"
+        tools:layout_alignParentStart="true">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
